# taostorage

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEPLOY.md  Dockerfile  LICENSE  README.md  README_EN.md  SECURITY.md  SOCIAL_CONTENT.md  SOCIAL_EN.md  config.json  docker-compose.yml  package.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  pages.yml  release.yml
.runtime/invites/: invites.json  reputation.json
cli/: Cargo.toml
cli/src/: daemon.rs  history.rs  invite.rs  main.rs  mcp.rs  query.rs
consensus/: Cargo.toml
consensus/src/: balance.rs  contract.rs  lib.rs  proof.rs  reputation.rs
core/: Cargo.toml  db.js  export.js  import.js  indexer.js  store.js
core/src/: erasure.rs  error.rs  group.rs  index.rs  lib.rs  metadata.rs  qi.rs  storage.rs  unit.rs
core/tests/: bench.rs  media.rs
crypto/: Cargo.toml
crypto/src/: bls.rs  encrypt.rs  homomorphic.rs  lib.rs  zk_proof.rs
integration/: demo.sh  gateway_hook.py  start.sh  tao_storage.py
invite-system/: Cargo.toml
invite-system/src/: lib.rs
network/: Cargo.toml
network/src/: behaviour.rs  dht.rs  lib.rs  obfuscation.rs  protocol.rs  swarm.rs  transport.rs
node/: Cargo.toml
node/src/: main.rs
node/tests/: compare.rs  integration.rs
rules/default_qi/: Cargo.toml
rules/default_qi/src/: lib.rs
scripts/: build-wasm.sh  demo.sh  install.sh  invite.sh  publish.sh  social-poster.sh  termux-install.sh
wasm_host/: Cargo.toml
wasm_host/src/: lib.rs  runtime.rs
www/: CNAME  Cargo.toml  audit.html  index.html  manifest.json  package.json  sw.js
www/css/: style.css
www/signaling-server/: package-lock.json  package.json  server.js
www/tao-browser/: Cargo.toml
www/tao-browser/src/: lib.rs
