[package]
name = "tao-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "tao"
path = "src/main.rs"

[dependencies]
tao-core = { path = "../core" }
tao-network = { path = "../network" }
tao-crypto = { path = "../crypto" }
sled.workspace = true
bincode.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
hex.workspace = true
sha2.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
axum.workspace = true
tower-http.workspace = true
uuid.workspace = true
chrono.workspace = true
rand.workspace = true
ed25519-dalek.workspace = true
libc = "0.2"
