[package]
name = "tao-core"
version.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
bincode.workspace = true
thiserror.workspace = true
tracing.workspace = true
rand.workspace = true
sha2.workspace = true
blake3.workspace = true
bs58.workspace = true
multihash.workspace = true
unsigned-varint.workspace = true
sled.workspace = true
reed-solomon-erasure.workspace = true
hex.workspace = true

[dev-dependencies]
tao-crypto = { path = "../crypto" }
tempfile = "3"
