[package]
name = "tao-crypto"
version.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
rand.workspace = true
sha2.workspace = true
blake3.workspace = true
ed25519-dalek.workspace = true
x25519-dalek.workspace = true
chacha20poly1305.workspace = true
bs58.workspace = true
