[package]
name = "tao-browser"
version = "0.3.0"
edition = "2021"
description = "TaoStorage WASM browser node — 在浏览器中运行 P2P 存储节点"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
sha2 = "0.10"
bs58 = "0.5"
hex = "0.4"
getrandom = { version = "0.2", features = ["js"] }
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "console",
    "Document",
    "Window",
    "Element",
    "HtmlElement",
    "HtmlInputElement",
    "HtmlTextAreaElement",
    "HtmlButtonElement",
    "HtmlDivElement",
    "Node",
    "Crypto",
    "SubtleCrypto",
    "RtcPeerConnection",
    "RtcSessionDescription",
    "RtcIceCandidate",
    "RtcConfiguration",
    "MediaStream",
    "Blob",
    "Url",
    "Storage",
    "WebSocket",
    "MessageEvent",
    "CloseEvent",
    "MouseEvent",
    "Event",
    "ErrorEvent",
] }

[profile.release]
opt-level = "s"
lto = true
